--- a/curso/temario.html
+++ b/curso/temario.html
@@ -20,9 +20,12 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
+  
+</head>
+<body>
 
 <!-- Analytics -->
-<!-- Facebook Pixel Code -->
+ <!-- Facebook Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -30,22 +33,17 @@ n.callMethod.apply(n,arguments):n.queue.push(arguments)};
 if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
 n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window,document,'script',
+s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
- fbq('init', '927746117427355'); 
+fbq('init', '2210428312595198');
 fbq('track', 'PageView');
 </script>
-<noscript>
- <img height="1" width="1" 
-src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
-&noscript=1"/>
-</noscript>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
+/></noscript>
 <!-- End Facebook Pixel Code -->
 <!-- /Analytics -->
 
-  
-</head>
-<body>
 
   <section class="mbr-section content4 cid-rUzTO6uyqN" id="content4-3l">
 
@@ -62,7 +60,7 @@ src="https://www.facebook.com/tr?id=927746117427355&ev=PageView
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content8 cid-rUzUYdMlic" id="content8-3z">
+<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="mbr-section content8 cid-rUzUYdMlic" id="content8-3z">
 
     
 
