--- a/curso/temario.html
+++ b/curso/temario.html
@@ -25,6 +25,16 @@
 <body>
 
 <!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162296781-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-162296781-1');
+</script>
+
  <!-- Facebook Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
@@ -60,7 +70,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="mbr-section content8 cid-rUzUYdMlic" id="content8-3z">
+<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="mbr-section content8 cid-rUzUYdMlic" id="content8-3z">
 
     
 
