--- a/curso/unidades.html
+++ b/curso/unidades.html
@@ -31,6 +31,16 @@
 <body>
 
 <!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162296781-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-162296781-1');
+</script>
+
  <!-- Facebook Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
@@ -66,7 +76,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="mbr-section content8 cid-rUzVkhB5fP" id="content8-40">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-section content8 cid-rUzVkhB5fP" id="content8-40">
 
     
 
