--- a/curso/index.html
+++ b/curso/index.html
@@ -28,6 +28,16 @@
 <body>
 
 <!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162296781-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-162296781-1');
+</script>
+
  <!-- Facebook Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
@@ -74,7 +84,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="cid-r6cGhRHPLU" id="video2-1f">
 
     
     
