--- a/curso/mp.html
+++ b/curso/mp.html
@@ -24,6 +24,16 @@
 <body>
 
 <!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162296781-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-162296781-1');
+</script>
+
  <!-- Facebook Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
@@ -100,7 +110,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="mbr-section info1 cid-ri7ohx3Vin" id="info1-1y">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section info1 cid-ri7ohx3Vin" id="info1-1y">
 
     
 
