--- a/curso/paypal.html
+++ b/curso/paypal.html
@@ -25,6 +25,16 @@
 <body>
 
 <!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162296781-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-162296781-1');
+</script>
+
  <!-- Facebook Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
@@ -116,7 +126,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="mbr-section info1 cid-ri7oLpli5f" id="info1-1z">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section info1 cid-ri7oLpli5f" id="info1-1z">
 
     
 
