--- a/curso/mundo.html
+++ b/curso/mundo.html
@@ -86,7 +86,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-info display-1">1b</a></div>
+                        <div class="mbr-section-btn text-center"><a href="http://wa.me/5491142970879" class="btn btn-info display-1" target="_blank">1b</a></div>
                         <img src="assets/images/whatsapp-image-2020-02-05-at-16.12.52-492x277.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
@@ -130,7 +130,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section info1 cid-ri7oLpli5f" id="info1-1z">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section info1 cid-ri7oLpli5f" id="info1-1z">
 
     
 
