--- a/curso/chile.html
+++ b/curso/chile.html
@@ -114,7 +114,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-section info1 cid-rWDlmCBMAV" id="info1-4l">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section info1 cid-rWDlmCBMAV" id="info1-4l">
 
     
 
