--- a/curso/app/index.html
+++ b/curso/app/index.html
@@ -83,11 +83,11 @@
 
 <select name="OS" class="btn btn-md download-btn-first wow fadeInLeft animated" data-wow-delay="0.85s" onclick="$('#fh5co-download').goTo();return false;" onchange="location = this.value;">
 <option selected value="0"> COMENZAR AHORA </option>
-   <option value="curso/argentina">Argentina</option> 
-   <option value="curso/chile">Chile</option> 
-   <option value="curso/colombia">Colombia</option>
-   <option value="curso/mexico">México</option> 
-   <option value="curso/mundo">Resto del Mundo</option> 
+   <option value="/curso/argentina">Argentina</option> 
+   <option value="/curso/chile">Chile</option> 
+   <option value="/curso/colombia">Colombia</option>
+   <option value="/curso/mexico">México</option> 
+   <option value="/curso/mundo">Resto del Mundo</option> 
 </select>
 <br/>
 
