--- a/curso/colombia.html
+++ b/curso/colombia.html
@@ -86,7 +86,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="features18 popup-btn-cards cid-rWDL0y5b6H" id="features18-4n">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="features18 popup-btn-cards cid-rWDL0y5b6H mbr-parallax-background" id="features18-4n">
 
     
 
@@ -168,6 +168,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/mbr-popup-btns/mbr-popup-btns.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
