--- a/curso/mexico.html
+++ b/curso/mexico.html
@@ -86,7 +86,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="features18 popup-btn-cards cid-rWCp3DS1II" id="features18-4h">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="features18 popup-btn-cards cid-rWCp3DS1II mbr-parallax-background" id="features18-4h">
 
     
 
@@ -168,6 +168,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/mbr-popup-btns/mbr-popup-btns.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
