--- a/landing.html
+++ b/landing.html
@@ -90,7 +90,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
           <div class="col-md-8 text-center">
 
             <div class="mb-5 element-animate">
-              <h1>APRENDÉ OTRAS MANERAS DE <span class="texto-animado"></span></h1>
+              <h1>APRENDÉ OTRAS MANERAS DE APRENDER</h1>
               <p class="lead">En este curso vas a crear tu propia mirada pedagógica inspirándote en las experiencias más innovadoras de transformación educativa.</p>
 <select name="OS" class="btn btn-primary" data-wow-delay="0.85s" onclick="$('#fh5co-download').goTo();return false;" onchange="location = this.value;">
 <option selected value="0"> COMIENZA AHORA </option>
