--- a/landing.html
+++ b/landing.html
@@ -391,7 +391,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Derec
     <script src="js/main.js"></script>
 	
 <script type="text/javascript">
-document.getElementById('botonargentina').addEventListener('action', function() {
+document.getElementById('botonargentina').addEventListener('select', function() {
   fbq('track', 'InitiateCheckout', {
     value: 1499,
     currency: 'ARS',
