--- a/landing.html
+++ b/landing.html
@@ -97,6 +97,17 @@
 <select name="OS" class="btn btn-primary" data-wow-delay="0.85s" onclick="$('#fh5co-download').goTo();return false;" onchange="location = this.value;">
    <option selected value="0"> COMIENZA AHORA </option>
    <option id="botonargentina" value="/curso/argentina">Argentina - $1499</option> 
+   
+   <script type="text/javascript">
+document.getElementById('botonargentina').addEventListener('selected', function() {
+fbq('track', 'InitiateCheckout', {
+    value: 1499,
+    currency: 'ARS',
+  });
+...
+}, false);
+</script>
+
    <option value="/curso/chile">Chile - $34900</option> 
    <option value="/curso/colombia">Colombia - $159000</option>
    <option value="/curso/mexico">México - $990</option> 
@@ -390,15 +401,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Derec
     
     <script src="js/main.js"></script>
 	
-<script type="text/javascript">
-document.getElementById('botonargentina').addEventListener('onchange', function() {
-  fbq('track', 'InitiateCheckout', {
-    value: 1499,
-    currency: 'ARS',
-  });
-...
-}, false);
-</script>
+	
+
+
+
 
   </body>
 </html>
