ver contenido boton

--- a/landing.html
+++ b/landing.html
@@ -103,15 +103,14 @@
    <option value="/curso/mundo">Resto del Mundo - US$39</option> 
 </select>
 
-<button id="botónPagar">Iniciar pago</button>
+<button id="Botón "Ver producto"">Ver contenido</button>
 <script type="text/javascript">
-document.getElementById('botónPagar').addEventListener('click', function() {
-<script>
-  fbq('track', 'InitiateCheckout', {
-    value: 1499,
-    currency: 'ARS',
-  });
-</script>;
+document.getElementById('Botón "Ver producto"').addEventListener('click', function() {
+
+
+  fbq('track', 'ViewContent');
+
+;
 ...
 }, false);
 </script>
