--- a/landing.html
+++ b/landing.html
@@ -46,17 +46,6 @@
 </script>
 
 
-<script type="text/javascript">
-document.getElementById('Botón "Ver producto"').addEventListener('click', function() {
-
-
-  fbq('track', 'ViewContent');
-
-;
-...
-}, false);
-</script>
-
 <noscript><img height="1" width="1" style="display:none"
   src="https://www.facebook.com/tr?id=232470194501034&ev=PageView&noscript=1"
 /></noscript>
@@ -108,15 +97,13 @@ document.getElementById('Botón "Ver producto"').addEventListener('click', funct
               <h1>APRENDÉ OTRAS MANERAS DE APRENDER</h1>
               <p class="lead">En este curso vas a crear tu propia mirada pedagógica inspirándote en las experiencias más innovadoras de transformación educativa.</p>
 <select name="OS" class="btn btn-primary" data-wow-delay="0.85s" onclick="$('#fh5co-download').goTo();return false;" onchange="location = this.value;">
-   <option selected value="0"> COMIENZA AHORA </option>
+   <option selected value="0"> ELIGE TU PAÍS </option>
    <option id="botonargentina" value="/curso/argentina">Argentina - $1499</option> 
    <option value="/curso/chile">Chile - $34900</option> 
    <option value="/curso/colombia">Colombia - $159000</option>
    <option value="/curso/mexico">México - $990</option> 
    <option value="/curso/mundo">Resto del Mundo - US$39</option> 
 </select>
-
-<button id="Botón "Ver producto"">Ver contenido</button>
 
             </div>
 
