--- a/descuento.html
+++ b/descuento.html
@@ -460,11 +460,11 @@ var x = setInterval(function() {
   document.getElementById("colombia").innerHTML = "Colombia";
   document.getElementById("mexico").innerHTML = "México";
   document.getElementById("mundo").innerHTML = "Resto del Mundo";
-  document.getElementById("argentina").value = "$ 1049|https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-3ea248b8-2089-4c47-864d-aad3e2a2ea76";
-  document.getElementById("chile").value = "$ 27900|https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-74644233-5b31-4383-9c10-56a93c5b00a3";
-  document.getElementById("colombia").value = "$ 111000|https://www.mercadopago.com.co/checkout/v1/redirect?pref_id=549349245-729b4f65-0b1e-491b-a969-86c3fd643f11";
-  document.getElementById("mexico").value = "$ 690|https://www.mercadopago.com.mx/checkout/v1/redirect?pref_id=549217379-f9563a51-494b-4b4c-9596-b49cd7bff02d";
-  document.getElementById("mundo").value = "US$ 27|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3FY23REHENPPN";
+  document.getElementById("argentina").value = "$ 1049 <s>$1499</s>|https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-3ea248b8-2089-4c47-864d-aad3e2a2ea76";
+  document.getElementById("chile").value = "$ 27900 <s>$39900</s>|https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-74644233-5b31-4383-9c10-56a93c5b00a3";
+  document.getElementById("colombia").value = "$ 111000 <s>$159000</s>|https://www.mercadopago.com.co/checkout/v1/redirect?pref_id=549349245-729b4f65-0b1e-491b-a969-86c3fd643f11";
+  document.getElementById("mexico").value = "$ 690 <s>$990</s>|https://www.mercadopago.com.mx/checkout/v1/redirect?pref_id=549217379-f9563a51-494b-4b4c-9596-b49cd7bff02d";
+  document.getElementById("mundo").value = "US$ 27 <s>US$ 39</s>|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3FY23REHENPPN";
   
   // If the count down is over, write some text 
   if (distance < 0) {
@@ -478,7 +478,7 @@ var x = setInterval(function() {
   document.getElementById("mexico").innerHTML = "México";
   document.getElementById("mundo").innerHTML = "Resto del Mundo";
     document.getElementById("argentina").value = "$ 1499|https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-cf6328bf-ee4c-471a-8829-406070b57a19";
-  document.getElementById("chile").value = "$ 34900|https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-157ddd84-661f-4674-b98c-489c516e590a";
+  document.getElementById("chile").value = "$ 39900|https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-157ddd84-661f-4674-b98c-489c516e590a";
   document.getElementById("colombia").value = "$ 159000https://www.mercadopago.com.co/checkout/v1/redirect?pref_id=549349245-8fe6b022-6ab7-4f2f-bbae-c343bb485d75";
   document.getElementById("mexico").value = "$ 990|https://www.mercadopago.com.mx/checkout/v1/redirect?pref_id=549217379-bf034686-c7b9-4cd8-9717-8558364731d1";
   document.getElementById("mundo").value = "US$ 39|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ALNYSBGMAT2AE";
