--- a/curso/temario.html
+++ b/curso/temario.html
@@ -81,7 +81,33 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="temario.html#pricing-tables2-4j">QUIERO INICIAR AHORA</a></div>
+                <div class="mbr-section-btn align-center">
+				<select id="botonpais" name="OS" class="btn btn-primary display-4" data-wow-delay="0.85s" onclick="$('#fh5co-download').goTo();return false;" onchange="valorboton()">
+<option selected value="TU PAÍS"> ELIGE TU PAÍS </option>
+   <option value="$ 1499|https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-cf6328bf-ee4c-471a-8829-406070b57a19">Argentina</option> 
+   <option value="$ 39900|https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-157ddd84-661f-4674-b98c-489c516e590a">Chile</option> 
+   <option value="$ 159000|https://www.mercadopago.com.co/checkout/v1/redirect?pref_id=549349245-8fe6b022-6ab7-4f2f-bbae-c343bb485d75">Colombia</option>
+   <option value="$ 990|https://www.mercadopago.com.mx/checkout/v1/redirect?pref_id=549217379-bf034686-c7b9-4cd8-9717-8558364731d1">México</option> 
+   <option value="US$ 39|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ALNYSBGMAT2AE">Resto del Mundo</option>   
+</select>
+
+
+<a id="botoncompra" class="btn btn-primary display-4" style="border-color: grey; background-color: grey; color: #fff; opacity: 1; margin: 10px;">COMENZAR AHORA</a>
+</div>
+
+<script>
+function valorboton() {
+  var x = document.getElementById("botonpais").value;
+  y = x.split("|")
+  document.getElementById("botoncompra").href = y[1];
+  document.getElementById("botoncompra").style.backgroundColor = "#227f56";
+  document.getElementById("botoncompra").style.borderColor = "#227f56";
+  document.getElementById("botoncompra").innerHTML = "COMIENZA YÁ POR " + y[0];
+
+}
+</script>
+				
+				
             </div>
         </div>
     </div>
