--- a/skolmi.html
+++ b/skolmi.html
@@ -98,7 +98,7 @@
 
 
               <h1 id="horapromo"></h1>
-              <p id="bajada" class="lead">Accedé a nuestro Curso Online Educación Alternativa en 8 Clases con un 30% de descuento por un tiempo limitado.</p>
+              <p id="bajada" class="lead">Accedé a nuestro Curso Online Educación Alternativa en 8 Clases con un 30% de descuento especial para la comunidad de SKOLMI solo por hoy.</p>
 
  
 			  
