--- a/curso/chile.html
+++ b/curso/chile.html
@@ -76,7 +76,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
                     <div class="mbr-section-text">
                         
                         <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-2">
-                            $34900 &nbsp;<span class="cost">$59900</span></p>
+                            $27900 &nbsp;<span class="cost">$34900</span></p>
                     </div>
                     <!--Btn-->
                     <div class="mbr-section-btn pt-3 align-left"><a href="https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-157ddd84-661f-4674-b98c-489c516e590a" class="btn btn-primary display-4" target="_blank">COMPRAR AHORA</a></div>
@@ -86,7 +86,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="features18 popup-btn-cards cid-rWDlmBdsN4 mbr-parallax-background" id="features18-4k">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="features18 popup-btn-cards cid-rWDlmBdsN4 mbr-parallax-background" id="features18-4k">
 
     
 
