--- a/curso/colombia.html
+++ b/curso/colombia.html
@@ -76,7 +76,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
                     <div class="mbr-section-text">
                         
                         <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-2">
-                            $159000 &nbsp;<span class="cost">$269000</span></p>
+                            $109900 &nbsp;<span class="cost">$159000</span></p>
                     </div>
                     <!--Btn-->
                     <div class="mbr-section-btn pt-3 align-left"><a href="https://www.mercadopago.com.co/checkout/v1/redirect?pref_id=549349245-8fe6b022-6ab7-4f2f-bbae-c343bb485d75" class="btn btn-primary display-4" target="_blank">COMPRAR AHORA</a></div>
@@ -86,7 +86,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="features18 popup-btn-cards cid-rWDL0y5b6H mbr-parallax-background" id="features18-4n">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="features18 popup-btn-cards cid-rWDL0y5b6H mbr-parallax-background" id="features18-4n">
 
     
 
