--- a/curso/mexico.html
+++ b/curso/mexico.html
@@ -76,7 +76,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
                     <div class="mbr-section-text">
                         
                         <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-2">
-                            $990 &nbsp;<span class="cost">$1790</span></p>
+                            $690 &nbsp;<span class="cost">$990</span></p>
                     </div>
                     <!--Btn-->
                     <div class="mbr-section-btn pt-3 align-left"><a href="https://www.mercadopago.com.mx/checkout/v1/redirect?pref_id=549217379-bf034686-c7b9-4cd8-9717-8558364731d1" class="btn btn-primary display-4" target="_blank">COMPRAR AHORA</a></div>
@@ -86,7 +86,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="features18 popup-btn-cards cid-rWCp3DS1II mbr-parallax-background" id="features18-4h">
+<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="features18 popup-btn-cards cid-rWCp3DS1II mbr-parallax-background" id="features18-4h">
 
     
 
