--- a/chile.html
+++ b/chile.html
@@ -94,7 +94,7 @@
               <h1>APRENDÉ OTRAS MANERAS DE APRENDER</h1>
               <p class="lead">En este curso vas a crear tu propia mirada pedagógica inspirándote en las experiencias más innovadoras de transformación educativa.</p>
 
-<a id="botoncompra" class="btn btn-primary" style=" color: #fff; opacity: 1; margin: 10px;" href="https://www.mercadopago.com.co/checkout/v1/redirect?pref_id=549349245-8fe6b022-6ab7-4f2f-bbae-c343bb485d75">COMENZAR YÁ POR $ 109900 <s>$159000</s></a>
+<a id="botoncompra" class="btn btn-primary" style=" color: #fff; opacity: 1; margin: 10px;" href="https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-157ddd84-661f-4674-b98c-489c516e590a">COMENZAR YÁ POR $ 27900 <s>$39900</s></a>
 
 
             </div>
