--- a/landing.html
+++ b/landing.html
@@ -96,11 +96,12 @@
               <p class="lead">En este curso vas a crear tu propia mirada pedagógica inspirándote en las experiencias más innovadoras de transformación educativa.</p>
 <select id="botonpais" name="OS" class="btn btn-primary" data-wow-delay="0.85s" onclick="$('#fh5co-download').goTo();return false;" onchange="valorboton()">
 <option selected value="TU PAÍS"> ELIGE TU PAÍS </option>
-   <option value="$ 1499|https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-cf6328bf-ee4c-471a-8829-406070b57a19">Argentina</option> 
-   <option value="$ 27900 <s>$39900</s>|https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-157ddd84-661f-4674-b98c-489c516e590a">Chile</option> 
-   <option value="$ 109900 <s>$159000</s>|https://www.mercadopago.com.co/checkout/v1/redirect?pref_id=549349245-8fe6b022-6ab7-4f2f-bbae-c343bb485d75">Colombia</option>
-   <option value="$ 690 <s>$990</s>|https://www.mercadopago.com.mx/checkout/v1/redirect?pref_id=549217379-bf034686-c7b9-4cd8-9717-8558364731d1">México</option> 
-   <option value="US$ 39|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ALNYSBGMAT2AE">Resto del Mundo</option>   
+   <option value="$ 1499|https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-110440e7-0c13-42a7-83ca-943ff32c003f">Argentina</option> 
+   <option value="$ 27900 <s>$39900</s>|https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-ef3b1a58-f045-46a7-9410-9957b27ee422">Chile</option> 
+   <option value="$ 109900 <s>$159000</s>|https://www.mercadopago.com.co/checkout/v1/redirect?pref_id=549349245-f198a972-40a6-4c54-9c9d-4c77a0eff6e6">Colombia</option>
+   <option value="$ 690 <s>$990</s>|https://www.mercadopago.com.mx/checkout/v1/redirect?pref_id=549217379-ef8a5dc8-0211-4f52-bda7-73bb840129f8">México</option> 
+   <option value="€ 34,99 <s>€59</s> |https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=B87DJ9SKV9BRC">Europa</option>  
+   <option value="US$ 39 <s>US$69</s>|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=2LTE2KWEBG2Y6">Resto del Mundo</option>  
 </select>
 
 
@@ -358,11 +359,12 @@ function valorboton() {
 <div class="mb-3 text-center">
 <select id="botonpais2" name="OS" class="btn btn-primary" data-wow-delay="0.85s" onclick="$('#fh5co-download').goTo();return false;" onchange="valorboton2()">
 <option selected value="TU PAÍS"> ELIGE TU PAÍS </option>
-   <option value="$ 1499|https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-cf6328bf-ee4c-471a-8829-406070b57a19">Argentina</option> 
-   <option value="$ 27900 <s>$39900</s>|https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-157ddd84-661f-4674-b98c-489c516e590a">Chile</option> 
-   <option value="$ 109900 <s>$159000</s>|https://www.mercadopago.com.co/checkout/v1/redirect?pref_id=549349245-8fe6b022-6ab7-4f2f-bbae-c343bb485d75">Colombia</option>
-   <option value="$ 690 <s>$990</s>|https://www.mercadopago.com.mx/checkout/v1/redirect?pref_id=549217379-bf034686-c7b9-4cd8-9717-8558364731d1">México</option> 
-   <option value="US$ 39|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=67WFPNEUZGV76">Resto del Mundo</option>  
+   <option value="$ 1499|https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-110440e7-0c13-42a7-83ca-943ff32c003f">Argentina</option> 
+   <option value="$ 27900 <s>$39900</s>|https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-ef3b1a58-f045-46a7-9410-9957b27ee422">Chile</option> 
+   <option value="$ 109900 <s>$159000</s>|https://www.mercadopago.com.co/checkout/v1/redirect?pref_id=549349245-f198a972-40a6-4c54-9c9d-4c77a0eff6e6">Colombia</option>
+   <option value="$ 690 <s>$990</s>|https://www.mercadopago.com.mx/checkout/v1/redirect?pref_id=549217379-ef8a5dc8-0211-4f52-bda7-73bb840129f8">México</option> 
+   <option value="€ 34,99 <s>€59</s> |https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=B87DJ9SKV9BRC">Europa</option>  
+   <option value="US$ 39 <s>US$69</s>|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=2LTE2KWEBG2Y6">Resto del Mundo</option>  
 </select>
 
 
