--- a/curso/error.html
+++ b/curso/error.html
@@ -70,7 +70,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="mbr-section content8 cid-rVzK7QAvWr" id="content8-42">
+<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="mbr-section content8 cid-rVzK7QAvWr" id="content8-42">
 
     
 
