--- a/curso/index.html
+++ b/curso/index.html
@@ -88,7 +88,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="cid-s3YTONttiu" id="video2-58">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="cid-s3YTONttiu" id="video2-58">
 
     
     
@@ -503,7 +503,7 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
                             <li class="list-group-item"><strong><em>Antes € 59</em></strong></li><li class="list-group-item">Acceso ilimitado</li><li class="list-group-item">1 usuario via Facebook</li><li class="list-group-item">8 clases en video</li><li class="list-group-item">Materiales</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="page10.html" class="btn btn-primary display-4">QUIERO PARTICIPAR</a></div>
+                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="europa.html" class="btn btn-primary display-4">QUIERO PARTICIPAR</a></div>
                 </div>
             </div>
 
